revamping style,templates and welcome screen